2011-11-25  Murray Cumming  <murrayc@murrayc.com>

	gcov: Use AC_PATH_PROG().

	* configure.ac: Check for the path to gcov.
	* Makefile.am: Use it.

2011-11-25  Murray Cumming  <murrayc@murrayc.com>

	Added a "make gcov" target to get some test coverage statistics.

	* configure.ac: Add an --enable-gcov option which add gcc/g++ flags.
	* Makefile_glom.am:
	* Makefile_libglom.am:
	* Makefile.am: Add some cargo-culted and hacked-together bash scripted
	rules that generate the .gcov files and parse them to give some 
	percentages on stdout.

2011-11-23  Murray Cumming  <murrayc@murrayc.com>

	Avoid deprecated glibmm API (from glibmm/thread.h).

	* configure.ac: Depend on a recent unstable glibmm. 
	* glom/libglom/spawn_with_feedback.cc: Use Glib::Threads::Cond and 
	Glib::Threads::Mutex instead of deprecated Glib::Cond and Glib::Mutex.

This is the master branch. See also the glom-1-20 branch.

2011-11-21  Murray Cumming  <murrayc@murrayc.com>

	libglom: Added DbUtils::set_fake_connection().

	* glom/libglom/db_utils.[h|cc]: Added DbUtils::set_fake_connection()
  because ConnectionPool is not public API.
	* tests/test_fake_connection.cc: Use this function instead of using 
	ConnectionPool's API.

1.20.0 (stable):

2011-11-20  Murray Cumming  <murrayc@murrayc.com>

	Details View: Left-align numbers when using automatic alignment.

	* glom/libglom/data_structure/layout/layoutitem_field.[h|cc]:
	* glom/libglom/data_structure/layout/layoutitem_withformatting.[h|cc]:
	get_formatting_used_horizontal_alignment(): Add a for_details_view() 
	and return left-alignment for auto-alignment on a details view.
	* glom/mode_data/datawidget/entry.cc:
	* glom/utility_widgets/layoutwidgetbase.cc: Pass true to get that 
	effect.

	Right-aligned numbers on the detailed view just look sillier now that
	the entry widgets are full width, and when there are no other numbers
	above or below them. Note that we probably did not purposefully 