@@ -1,5 +1,12 @@
 2011-11-25  Murray Cumming  <murrayc@murrayc.com>
 
+	gcov: Use lcov instead of my hacky bash script.
+
+	* configure.ac: Check for lcov and genhtml.
+	* Makefile.am: This generates a nice HTML report.
+
+2011-11-25  Murray Cumming  <murrayc@murrayc.com>
+
 	gcov: Use AC_PATH_PROG().
 
 	* configure.ac: Check for the path to gcov.
